; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ks8842.c_ks8842_read16.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ks8842.c_ks8842_read16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ks8842_adapter = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ks8842_adapter*, i32, i32)* @ks8842_read16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ks8842_read16(%struct.ks8842_adapter* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ks8842_adapter*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ks8842_adapter* %0, %struct.ks8842_adapter** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ks8842_adapter*, %struct.ks8842_adapter** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @ks8842_select_bank(%struct.ks8842_adapter* %7, i32 %8)
  %10 = load %struct.ks8842_adapter*, %struct.ks8842_adapter** %4, align 8
  %11 = getelementptr inbounds %struct.ks8842_adapter, %struct.ks8842_adapter* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i32, i32* %6, align 4
  %14 = sext i32 %13 to i64
  %15 = add nsw i64 %12, %14
  %16 = call i32 @ioread16(i64 %15)
  ret i32 %16
}

declare dso_local i32 @ks8842_select_bank(%struct.ks8842_adapter*, i32) #1

declare dso_local i32 @ioread16(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
